# trueminer

./: CMakeLists.txt  CuAPI_helper.h  README.md  RefHash.cu  fchainhash.cu  gpu_var.h  hash.h  sha3.cu  sha3.h
